# Caneda

./: .gitignore  CMakeLists.txt  README.md  caneda.desktop  caneda.xml
contrib/qwt-6.1.6/: CMakeLists.txt
docs/: documentsformat.h
images/png/: CMakeLists.txt
libraries/components/transmission/: losslesstransmission4.xsym  losslesstransmissionalternative4.xsym  lossytransmission4.xsym
src/: actionmanager.cpp  actionmanager.h  chartscene.h  chartview.cpp  chartview.h  component.cpp  component.h  documentviewmanager.cpp  documentviewmanager.h  fileformats.cpp  fileformats.h  folderbrowser.cpp  folderbrowser.h  global.cpp  global.h  graphicsitem.cpp  graphicsitem.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  icontext.cpp  icontext.h  idocument.cpp  idocument.h  iview.cpp  iview.h  library.cpp  library.h  mainwindow.cpp  mainwindow.h  modelviewhelpers.cpp  modelviewhelpers.h  port.cpp  port.h  portsymbol.cpp  portsymbol.h  project.cpp  project.h  property.cpp  (+20 more)
src/dialogs/: aboutdialog.h  aboutdialog.ui  chartsdialog.h  exportdialog.cpp  exportdialog.h  filenewdialog.cpp  filenewdialog.h  filenewdialog.ui  messagewidget.cpp  messagewidget.h  portsymboldialog.h  printdialog.cpp  printdialog.h  projectfilenewdialog.cpp  projectfilenewdialog.h  projectfileopendialog.cpp  projectfileopendialog.h  propertydialog.cpp  propertydialog.h  savedocumentsdialog.cpp  savedocumentsdialog.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  shortcutsdialog.cpp  shortcutsdialog.h
src/paintings/: CMakeLists.txt  arrow.h  ellipse.h  ellipsearc.h  graphicline.h  graphictext.cpp  graphictext.h  graphictextdialog.cpp  graphictextdialog.h  layer.h  painting.cpp  painting.h  rectangle.h  styledialog.cpp  styledialog.h  styledialog.ui
src/tools/: gitmanager.cpp  gitmanager.h  quickinsert.cpp  quickinsert.h  quicklauncher.cpp  quicklauncher.h  quickopen.cpp  quickopen.h
